[package]
name = "rm-todo"
version = "0.1.0"
authors = ["osama530 <osamaqamar93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "0.14.1"

[dependencies.mongodb]
version = "1.0.0"
default-features = false
features = ["sync"]